--- a/ctyie.css
+++ b/ctyie.css
@@ -97,7 +97,6 @@ body {
 
 .search-elements {
     display: flex;
-
     margin-right: 20px;
     color: rgba(242, 238, 255, 0.60);
 
@@ -122,11 +121,9 @@ body {
     border-radius: 4px;
     background: rgba(255, 255, 255, 0.10);
     margin-right: 18px;
-
     font-size: 12px;
     font-family: Inter;
     font-style: normal;
-
 }
 
 .search-elements-btn {
@@ -141,15 +138,13 @@ body {
 .img-btn {
     border-radius: 50%;
     padding-top: 4px;
-
 }
 
 .search-or {
     display: flex;
-
 }
 
-a {
+ .logo-heroku a {
     color: rgba(242, 238, 255, 0.60);
     font-size: 13px;
     font-family: Inter;
@@ -157,19 +152,18 @@ a {
     font-weight: 700;
     line-height: 19.6px;
     text-decoration: none;
-
-}
-a:hover,
-select:hover {
-    color: #FFF;
+    transition: 150ms;
 }
 
 select {
     background-color: initial;
-
     color: rgba(242, 238, 255, 0.60);
     border: none;
-
+    transition: 120ms;
+}
+.logo-heroku a:hover,
+select:hover {
+    color: #FFF;
 }
 
 .login-elements {
@@ -195,38 +189,86 @@ select {
     border: none;
     padding: 0 12px 0 12px;
 }
-.sign-elements:hover{
-    background:  rgba(5, 5, 5, 0.445);
+
+.sign-elements:hover {
+    background: rgba(5, 5, 5, 0.445);
 }
+
 .center {
-   max-width: 740px;
-   height: 200px;
-   align-items: center;
-   margin: 68px auto 0 auto;       
+    max-width: 740px;
+    height: 200px;
+    align-items: center;
+    margin: 68px auto 0 auto;
 }
+
 .center-icon {
     width: 48.02px;
-height: 48px;
-flex-shrink: 0;
-margin: 0 0 12px 360px;
+    height: 48px;
+    flex-shrink: 0;
+    margin: 0 0 12px 360px;
 }
+
 .center-title {
     color: #FFF;
-text-align: center;
-font-size: 35px;
-font-family: Inter;
-font-style: normal;
-font-weight: 300;
-line-height: 43.2px;
-margin-bottom: 17px;
+    text-align: center;
+    font-size: 35px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 43.2px;
+    margin-bottom: 17px;
 }
+
 .center-text {
     color: #CCBFDB;
-text-align: center;
-font-size: 16px;
-font-family: Inter;
-font-style: normal;
-font-weight: 400;
-line-height: 19.2px;
+    text-align: center;
+    font-size: 16px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 19.2px;
+}
 
+/* main bar */
+
+main {
+    width: 50%;
+    margin: auto;
+}
+
+.main-bar {
+    display: flex;
+    gap: 20px;
+    margin-top: 15px;
+    align-items: center;
+}
+
+.img-bar {
+    width: 16.02px;
+    height: 16px;
+    margin: 12px 0 0 0;
+}
+
+.link-bar {
+    color: rgba(121, 88, 159, 0.60);
+    font-size: 15px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    margin-left: 6px;
+    text-decoration: none;
+    transition: 150ms;
+}
+
+.link-img {
+    transition: 150ms;
+}
+
+.link-img:hover {
+    border-bottom: 2px solid #79589F;
+}
+
+.link-bar:hover {
+    color: #79589F;
 }
