--- a/ctyie.css
+++ b/ctyie.css
@@ -7,8 +7,8 @@
 body {
     font-family: Inter;
     width: 100%;
-
     margin: auto;
+    
 }
 
 /* logo */
@@ -78,6 +78,7 @@ body {
 .link-selest-more {
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 
 .logo-heroku-up-left {
@@ -243,6 +244,7 @@ main {
     gap: 20px;
     margin-top: 15px;
     align-items: center;
+    cursor: pointer;
 }
 
 .img-bar {
@@ -295,17 +297,19 @@ main {
     gap: 6px;
 }
 
-.card-container{
-    
+.card-container {
+
     width: 284px;
     height: 220px;
     border-radius: 2px;
-border: 1px solid #D8DDE6;
-background: #FFF;
-transition: 150ms;
+    border: 1px solid #D8DDE6;
+    background: #FFF;
+    transition: 150ms;
+    cursor: pointer;
 }
+
 .card-container:hover {
-    border:1px solid #79589F;
+    border: 1px solid #79589F;
     box-shadow: 0px 0px 1px rgba(74, 74, 74, 0.3);
 }
 
@@ -314,42 +318,44 @@ transition: 150ms;
     padding: 0 20px;
     padding-top: 15px;
 }
+
 .card-title {
     display: flex;
     gap: 5px;
     align-items: center;
     color: #3F3F44;
-font-size: 13px;
-font-family: Inter;
-font-style: normal;
-font-weight: 400;
-line-height: 19.5px;
+    font-size: 13px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 19.5px;
 }
 
 .text-card {
     color: #3F3F44;
-font-size: 13px;
-font-family: Inter;
-font-style: normal;
-font-weight: 700;
-line-height: 16.8px;
-margin-top: 10px;
+    font-size: 13px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 16.8px;
+    margin-top: 20px;
 }
+
 .card-line {
-    background: linear-gradient(to left, #64438B, #C6ACE5); 
-    width: 100%; 
+    background: linear-gradient(to left, #64438B, #C6ACE5);
+    width: 100%;
     height: 1px;
     margin-top: 15px;
 }
 
 .text-card-down {
     color: #4C4C4C;
-font-size: 12px;
-font-family: Inter;
-font-style: normal;
-font-weight: 400;
-line-height: 18px;
-margin-top: 15px;
+    font-size: 12px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
+    margin-top: 15px;
 }
 
 
@@ -361,25 +367,28 @@ margin-top: 15px;
     color: #3F3F44;
 
 }
+
 .card-down-left {
     display: flex;
     gap: 9px;
 }
+
 .icon-num {
     display: flex;
     gap: 2px;
-    font-size: 12px; 
-    align-items: center; 
+    font-size: 12px;
+    align-items: center;
 }
+
 .card-down-hight {
     height: 43px;
-    background:  rgba(242, 242, 245, 0.50);
+    background: rgba(242, 242, 245, 0.50);
     margin-top: 18px;
 }
 
 .card-down-right img {
     width: 14px;
-height: 14px;
+    height: 14px;
 }
 
 
@@ -445,3 +454,102 @@ height: 14px;
     background: lightgray 262.878px 12.686px 2.518% 31.429% no-repeat, #FFF;
 }
 
+
+.wrapper {
+    margin-top: 90px;
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: space-between;
+    height: 82px;
+}
+.btn-left button {
+    padding: 5px 0.01px 5px 0px;
+    align-items: flex-start;
+    gap: 3.51px;
+    width: 60px;
+    height: 28px;
+    color: #CFD7E6;
+    text-align: center;
+    font-size: 11px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 18px;
+    border-radius: 3px;
+    background: #F9F9FB;
+    box-shadow: 0px 0px 0px 1px #CFD7E6 inset;
+    border: none;
+    cursor: not-allowed;
+}
+
+.btn-rihgt button {
+    padding: 5px 0.01px 5px 0px;
+    align-items: flex-start;
+    gap: 3.51px;
+    width: 60px;
+    height: 28px;
+    color:  #79589F;
+    text-align: center;
+    font-size: 11px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 18px;
+    border-radius: 3px;
+    background:  #F9F9FB;
+    box-shadow: 0px 0px 0px 1px  #79589F inset;
+    border: none;
+    cursor: pointer;
+}
+.wrapper-text p {
+    color: #3F3F44;
+text-align: center;
+font-size: 13px;
+font-family: Inter;
+font-style: normal;
+font-weight: 400;
+line-height: 19.5px;
+}
+
+.list {
+    margin-bottom: 61px;
+    display: flex;
+    justify-content: center;
+    gap: 34px;
+    
+    
+}
+
+.nav-list-right a,
+.nav-list-left a {
+    text-decoration: none;
+    color: #9B9FA2;
+    text-align: center;
+    font-size: 13px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 19.5px; 
+    transition: 150ms; 
+    
+}
+.nav-list-left a:hover,
+.nav-list-right a:hover {
+    color:  #3F3F44;
+}
+
+footer {
+    max-width: 1160px;
+    margin: auto;
+}
+
+.footer-container {
+    display: flex;
+    margin-bottom: 20px;
+}
+li {
+    list-style: none;
+}
+a {
+    text-decoration: none;
+}
